source/blender/editors/io/io_collada.c
@@ -98,6 +98,7 @@ static int wm_collada_export_exec(bContext *C, wmOperator *op)
 	int sampling_rate;
 	int keep_smooth_curves;
 	int keep_keyframes;
+	int keep_flat_curves;
 
 	int export_animation_type;
 	int use_texture_copies;
@@ -157,6 +158,7 @@ static int wm_collada_export_exec(bContext *C, wmOperator *op)
 	sampling_rate            = (sample_animations) ? RNA_int_get(op->ptr, "sampling_rate") : 0;
 	keep_smooth_curves       = RNA_boolean_get(op->ptr, "keep_smooth_curves");
 	keep_keyframes           = RNA_boolean_get(op->ptr, "keep_keyframes");
+	keep_flat_curves         = RNA_boolean_get(op->ptr, "keep_flat_curves");
 
 	deform_bones_only        = RNA_boolean_get(op->ptr, "deform_bones_only");
 
@@ -195,6 +197,7 @@ static int wm_collada_export_exec(bContext *C, wmOperator *op)
 	export_settings.include_all_actions = include_all_actions != 0;
 	export_settings.sampling_rate = sampling_rate;
 	export_settings.keep_keyframes = keep_keyframes != 0 || sampling_rate < 1;
+	export_settings.keep_flat_curves = keep_flat_curves != 0;
 
 	export_settings.active_uv_only = active_uv_only != 0;
 	export_settings.export_animation_type = export_animation_type;
@@ -357,6 +360,9 @@ static void uiCollada_exportSettings(uiLayout *layout, PointerRNA *imfptr)
 		uiItemR(row, imfptr, "keep_keyframes", 0, NULL, ICON_NONE);
 		uiLayoutSetEnabled(row, sampling && include_animations);
 
+		row = uiLayoutColumn(box, false);
+		uiItemR(row, imfptr, "keep_flat_curves", 0, NULL, ICON_NONE);
+
 		row = uiLayoutRow(box, false);
 		uiItemR(row, imfptr, "include_all_actions", 0, NULL, ICON_NONE);
 		uiLayoutSetEnabled(row, include_animations);
@@ -502,7 +508,10 @@ void WM_OT_collada_export(wmOperatorType *ot)
 	                "is the unity matrix, otherwise you may end up with odd results)");
 
 	RNA_def_boolean(func, "keep_keyframes", 0, "Keep Keyframes",
-	                "Use existing keyframes as additional sample points (this helps when you want to keep manual tweaks)");
+		"Use existing keyframes as additional sample points (this helps when you want to keep manual tweaks)");
+
+	RNA_def_boolean(func, "keep_flat_curves", 0, "All keyed curves",
+		"Export also curves which have only one key or are totally flat");
 
 	RNA_def_boolean(func, "active_uv_only", 0, "Only Selected UV Map",
 	                "Export only the selected UV Map");
